--- a/BIG PROJECT 01/index.html
+++ b/BIG PROJECT 01/index.html
@@ -11,10 +11,49 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&family=Lato:wght@300;400;700&family=Roboto:wght@300&display=swap"
       rel="stylesheet"
-    /> 
-    <title>HELLO</title>
+    />
+    <title>Big Project</title>
   </head>
   <body>
-   
+    <!-- HERO SECTION -->
+    <section class="hero">
+      <div class="section-container mb-40 px-10 pt-16">
+        <img src="./images/logo.svg" alt="" class="mx-auto my-16" />
+        <h3>A history of Everything you copy</h3>
+        <p class="max-w-3xl mx-auto mb-10 text-2xl text-grayishBlue">
+          Clipboard allow you to track and organize everything you copy.
+          Instantly access your clipboard on all your devices.
+        </p>
+        <!-- Button Container -->
+        <div
+          class="button-container"
+        >
+          <a
+            href="#"
+            class="p-4 px-8 rounded-full shadow-lg bg-strongCyan duration-200 hover:opacity-80"
+            >Download for IOS</a
+          >
+          <a
+            href="#"
+            class="p-4 px-8 rounded-full shadow-lg bg-duration-200 hover:opacity-80 bg-lightBlue"
+            >Download for Mac</a
+          >
+        </div>
+      </div>
+    </section>
+
+    <!-- Snippets Section -->
+    <section class="snippets">
+      <div class="section-container my-20 px-10">
+        <h3>Keep Track of your snippets</h3>
+        <p
+          class="max-w-3xl mb-24 text-xl mx-auto leading-9 text-center text-grayishBlue"
+        >
+          Clipboard instantly stores any item you copy in the cloud, meaning you
+          can access your snippets immediately on all your device. Our Mac and
+          IOS apps will help you organize everything.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
